// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vaults.utils getVaultPerformance no rewards or harvests returns value sources from fallback methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 189.11917098445593,
    "boostable": false,
    "harvestable": false,
    "maxApr": 189.11917098445593,
    "minApr": 189.11917098445593,
    "name": "Vault Compounding",
    "oneDay": 183.4170854271372,
    "sevenDay": 189.11917098445593,
    "thirtyDay": 214.7058823529413,
    "threeDay": 185.27918781725862,
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_flat_Sushi_emission",
    "apr": 8.888,
    "boostable": false,
    "harvestable": false,
    "maxApr": 8.888,
    "minApr": 8.888,
    "name": "Sushi Rewards",
    "oneDay": 8.888,
    "sevenDay": 8.888,
    "thirtyDay": 8.888,
    "threeDay": 8.888,
    "type": "flat_Sushi_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "harvestable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "oneDay": 6.969,
    "sevenDay": 6.969,
    "thirtyDay": 6.969,
    "threeDay": 6.969,
    "type": "boosted_bBADGER_emission",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests non compatible network vault performances returns value sources from fallback methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967",
    "addressValueSourceType": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967_compound",
    "apr": 189.11917098445593,
    "boostable": false,
    "harvestable": false,
    "maxApr": 189.11917098445593,
    "minApr": 189.11917098445593,
    "name": "Vault Compounding",
    "oneDay": 183.4170854271372,
    "sevenDay": 189.11917098445593,
    "thirtyDay": 214.7058823529413,
    "threeDay": 185.27918781725862,
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967",
    "addressValueSourceType": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967_flat_Sushi_emission",
    "apr": 8.888,
    "boostable": false,
    "harvestable": false,
    "maxApr": 8.888,
    "minApr": 8.888,
    "name": "Sushi Rewards",
    "oneDay": 8.888,
    "sevenDay": 8.888,
    "thirtyDay": 8.888,
    "threeDay": 8.888,
    "type": "flat_Sushi_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "harvestable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "oneDay": 6.969,
    "sevenDay": 6.969,
    "thirtyDay": 6.969,
    "threeDay": 6.969,
    "type": "boosted_bBADGER_emission",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests non standard vault performance returns value sources from fallback methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 189.11917098445593,
    "boostable": false,
    "harvestable": false,
    "maxApr": 189.11917098445593,
    "minApr": 189.11917098445593,
    "name": "Vault Compounding",
    "oneDay": 183.4170854271372,
    "sevenDay": 189.11917098445593,
    "thirtyDay": 214.7058823529413,
    "threeDay": 185.27918781725862,
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_flat_Sushi_emission",
    "apr": 8.888,
    "boostable": false,
    "harvestable": false,
    "maxApr": 8.888,
    "minApr": 8.888,
    "name": "Sushi Rewards",
    "oneDay": 8.888,
    "sevenDay": 8.888,
    "thirtyDay": 8.888,
    "threeDay": 8.888,
    "type": "flat_Sushi_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "harvestable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "oneDay": 6.969,
    "sevenDay": 6.969,
    "thirtyDay": 6.969,
    "threeDay": 6.969,
    "type": "boosted_bBADGER_emission",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests standard vault performance returns value sources from standard methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_precompound",
    "apr": 294.0857142857143,
    "boostable": false,
    "harvestable": true,
    "maxApr": 294.0857142857143,
    "minApr": 294.0857142857143,
    "name": "Vault Compounding",
    "oneDay": 294.0857142857143,
    "sevenDay": 294.0857142857143,
    "thirtyDay": 294.0857142857143,
    "threeDay": 294.0857142857143,
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 1522.4097587847332,
    "boostable": false,
    "harvestable": false,
    "maxApr": 1522.4097587847332,
    "minApr": 1522.4097587847332,
    "name": "Vault Compounding",
    "oneDay": 1522.4097587847332,
    "sevenDay": 1522.4097587847332,
    "thirtyDay": 1522.4097587847332,
    "threeDay": 1522.4097587847332,
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_flat_bCVXCRV_emission",
    "apr": 0.000746374862637492,
    "boostable": false,
    "harvestable": false,
    "maxApr": 0.000746374862637492,
    "minApr": 0.000746374862637492,
    "name": "bCVXCRV Rewards",
    "oneDay": 0.000746374862637492,
    "sevenDay": 0.000746374862637492,
    "thirtyDay": 0.000746374862637492,
    "threeDay": 0.000746374862637492,
    "type": "flat_bCVXCRV_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_derivative_bcvxcrv compounding",
    "apr": 0.00007463751330316626,
    "boostable": false,
    "harvestable": false,
    "maxApr": 0.00007463751330316626,
    "minApr": 0.00007463751330316626,
    "name": "bCVXCRV Compounding",
    "oneDay": 0.00007463751330316626,
    "sevenDay": 0.00007463751330316626,
    "thirtyDay": 0.00007463751330316626,
    "threeDay": 0.00007463751330316626,
    "type": "derivative_bcvxcrv compounding",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_flat_bveCVX_emission",
    "apr": 0.0033639964285721896,
    "boostable": false,
    "harvestable": false,
    "maxApr": 0.0033639964285721896,
    "minApr": 0.0033639964285721896,
    "name": "bveCVX Rewards",
    "oneDay": 0.0033639964285721896,
    "sevenDay": 0.0033639964285721896,
    "thirtyDay": 0.0033639964285721896,
    "threeDay": 0.0033639964285721896,
    "type": "flat_bveCVX_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_derivative_bvecvx compounding",
    "apr": 0.0003364001870176381,
    "boostable": false,
    "harvestable": false,
    "maxApr": 0.0003364001870176381,
    "minApr": 0.0003364001870176381,
    "name": "bveCVX Compounding",
    "oneDay": 0.0003364001870176381,
    "sevenDay": 0.0003364001870176381,
    "thirtyDay": 0.0003364001870176381,
    "threeDay": 0.0003364001870176381,
    "type": "derivative_bvecvx compounding",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "harvestable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "oneDay": 6.969,
    "sevenDay": 6.969,
    "thirtyDay": 6.969,
    "threeDay": 6.969,
    "type": "boosted_bBADGER_emission",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests standard vault performance skips all emitted tokens with no price 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_precompound",
    "apr": 294.0857142857143,
    "boostable": false,
    "harvestable": true,
    "maxApr": 294.0857142857143,
    "minApr": 294.0857142857143,
    "name": "Vault Compounding",
    "oneDay": 294.0857142857143,
    "sevenDay": 294.0857142857143,
    "thirtyDay": 294.0857142857143,
    "threeDay": 294.0857142857143,
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 1522.4097587847332,
    "boostable": false,
    "harvestable": false,
    "maxApr": 1522.4097587847332,
    "minApr": 1522.4097587847332,
    "name": "Vault Compounding",
    "oneDay": 1522.4097587847332,
    "sevenDay": 1522.4097587847332,
    "thirtyDay": 1522.4097587847332,
    "threeDay": 1522.4097587847332,
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "harvestable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "oneDay": 6.969,
    "sevenDay": 6.969,
    "thirtyDay": 6.969,
    "threeDay": 6.969,
    "type": "boosted_bBADGER_emission",
  },
]
`;
